# mela-mcp

./: README.md  pyproject.toml
src/mela_mcp/: __init__.py  calendar.py  database.py  meal_log.py  reminders.py  server.py
