[project]
name = "mela-mcp"
version = "0.1.0"
description = "MCP server for Mela recipe database and meal scheduling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
mela-mcp = "mela_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mela_mcp"]
